ui/scss/component/_membership.scss
/* ... */
.card--join-membership {
  .join-membership__modal-header {
    height: 108px;
    margin-bottom: var(--spacing-l);

    .channel-thumbnail {
      width: 108px;
      height: 108px;
      margin-right: var(--spacing-m);
      float: left;
    }
    h2 {
      font-weight: bold;
    }
    h3 {
      font-size: var(--font-title);
    }
    p {
      font-size: var(--font-small);
      opacity: 0.8;
    }

    @media (max-width: $breakpoint-small) {
      height: 158px;
      h2 {
        padding-top: var(--spacing-l);
      }
      h3 {
        padding-bottom: var(--spacing-l);
      }
    }

    @media (max-width: $breakpoint-xsmall) {
      .channel-thumbnail {
        margin-top: var(--spacing-m);
        margin-right: var(--spacing-s);
        width: 74px;
        height: 74px;
      }

      h3 {
        padding-bottom: var(--spacing-s);
      }
    }

    @media (max-width: $breakpoint-xxsmall) {
      height: 138px;
      margin-bottom: var(--spacing-s);
      .channel-thumbnail {
        margin-top: 0;
        margin-right: var(--spacing-s);
        width: 44px;
        height: 44px;
      }

      h2 {
        font-size: var(--font-base);
        padding-top: 0;
      }

      h3 {
        padding-bottom: var(--spacing-s);
        font-size: var(--font-body);
        font-weight: bold;
      }
    }
  }

  .join-membership__modal-tabs {
    margin-bottom: var(--spacing-s);
  }

  .join-membership__modal-content {
    h2 {
      display: none;
    }
    .membership-tier__perks {
      display: flex;
      flex-flow: row;
      width: 100%;
      background: var(--color-header-background);
      padding: var(--spacing-xs);
      border: 2px solid var(--color-border);
      margin-top: var(--spacing-m);
      margin-bottom: var(--spacing-l);
      border-radius: var(--border-radius);
      overflow: hidden;

      .membership-tier__moon {
        float: left;
        width: 42%;
        height: 260px;
        background-image: url('https://thumbnails.odycdn.com/optimize/s:900:0/quality:95/plain/https://static.odycdn.com/images/moon.png');
        background-size: cover;
        background-position: -5px -10px;
        border-radius: var(--border-radius) 0 0 var(--border-radius);
        margin-left: -40px;
        margin-top: -56px;
        margin-bottom: -76px;
        transform: rotate(-16deg);
      }
      .membership-tier__perks-content {
        margin-left: var(--spacing-s);
        ul {
          li {
            &:nth-of-type(1) {
              margin-left: 27px !important;
            }
            &:nth-of-type(2) {
              margin-left: 34px !important;
            }
            &:nth-of-type(3) {
              margin-left: 41px !important;
            }
            &:nth-of-type(4) {
              margin-left: 48px !important;
            }
            &:nth-of-type(5) {
              margin-left: 55px !important;
            }
            &:nth-of-type(6) {
              margin-left: 62px !important;
            }
          }
        }
      }
    }
  }

  .join-membership__tab {
    display: grid;
    grid-gap: var(--spacing-l);
    grid-template-columns: repeat(3, 1fr);
    justify-content: left;

    @media (max-width: $breakpoint-small) {
      grid-template-columns: repeat(1, 1fr);
    }

    @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
      grid-template-columns: repeat(2, 1fr);

      .item5-5 {
        // justify-self: center;
        grid-column-start: 1;
        grid-column-end: 3;
        width: 50%;
      }
    }
  }

  .join-membership__empty {
    max-width: 539px;
    margin: 0 auto;

    .header--no-memberships {
      font-size: 1.2rem;
      line-height: 1.25;
      margin-top: var(--spacing-s);
      margin-bottom: 16px;
    }

    .button {
      margin-top: var(--spacing-m);
    }

    h2 {
      line-height: 29px;
    }
  }

  .card__body {
    margin: 0 auto;
  }

  .card__body--no-title {
    padding-top: 0;
  }
}

.membership-tier__perks {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  //height: 100%;
  // align-items: center;

  ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    list-style: none;

    > div {
      height: 100%;

      .expandable__wrapper {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        .expandable--closed {
          max-height: calc(180px * 3 / 4);
        }
      }
    }
  }

  li {
    margin-left: 1.3em !important;
  }

  li:before {
    content: '\2605';
    color: #ffc800;
    display: inline-block;
    margin-left: -1.3em;
    width: 1.3em;
  }

  ul,
  li {
    list-style-position: inside !important;
  }

  p {
    text-align: left;
  }
}
/* ... */

